--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,23 @@
   margin: 40px auto;
   padding: 20px;
 }
+
+.friends-preview {
+  padding: 10px 16px;
+  margin: 20px 0;
+  border-bottom: 1px solid #fafafa;
+}
+.friends-preview:hover {
+  box-shadow: 1px 3px 5px rgba(0,0,0,0.1);
+}
+.friends-preview h2 {
+  font-size: 20px;
+  color: #f1356d;
+  margin-bottom: 8px;
+  display: inline-block;
+}
+.friends-preview img{
+  width: 100px;
+  /* height: 200px; */
+  display: inline-block;
+}
