--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,14 @@
   font-size: 20px;
   color: #f1356d;
   margin-bottom: 8px;
-  display: inline-block;
 }
 .friends-preview img{
   width: 100px;
   /* height: 200px; */
   display: inline-block;
+}
+
+.a{
+  display: inline-block;
+
 }
