--- a/src/index.css
+++ b/src/index.css
@@ -31,9 +31,19 @@ a {
   color: #f1356d;
 }
 
+.map-div {
+  margin: 20px auto
+}
 .map-container {
-  width: 100%;
-  height: 60vh;
+  width: 70%;
+  height: 40vh;
+}
+
+.friend-profile {
+  float: left;
+  width:  150px;
+  height: 150px;
+  object-fit: cover;
 }
 
 .navbar {
