--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ a {
 }
 .friends-preview h2 {
   font-size: 20px;
-  color: #f1356d;
+  color: #ff2257;
 }
 
 .map-div {
@@ -54,7 +54,7 @@ a {
   border-bottom: 1px solid #f2f2f2;
 }
 .navbar h1 {
-  color: #f1356d;
+  color: #ff2257;
 }
 .navbar .links {
   margin-left: auto;
